--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
@@ -27,7 +27,8 @@
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
                data-display="true"
-               data-unit-conver="false"
+               data-unit-conver="true"
+               data-unit="1000"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -41,7 +42,8 @@
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
                data-display="true"
-               data-unit-conver="false"
+               data-unit-conver="true"
+               data-unit="1000"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -69,6 +71,7 @@
                data-smoother-selector="#smoother"
                data-display="true"
                data-unit-conver="true"
+               data-unit="1024"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -83,6 +86,7 @@
                data-smoother-selector="#smoother"
                data-display="true"
                data-unit-conver="true"
+               data-unit="1024"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -106,6 +110,7 @@
                data-legend-selector="#legend"
                data-display="true"
                data-unit-conver="true"
+               data-unit="1024"
                data-smoother-selector="#smoother"
                data-slider-selector="#slider">
           </div>
@@ -119,7 +124,8 @@
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-display="true"
-               data-unit-conver="false"
+               data-unit-conver="true"
+               data-unit="1024"
                data-smoother-selector="#smoother"
                data-slider-selector="#slider">
           </div>
