--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
@@ -25,7 +25,8 @@
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
                data-display="true"
-               data-unit-conver="false"
+               data-unit-conver="true"
+               data-unit="1000"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -65,7 +66,8 @@
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
                data-display="true"
-               data-unit-conver="false"
+               data-unit-conver="true"
+               data-unit="1024"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -78,7 +80,9 @@
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
-               data-display="false"
+               data-display="true"
+               data-unit-conver="true"
+               data-unit="1024"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -105,6 +109,7 @@
                data-display="true"
                data-smoother-selector="#smoother"
                data-unit-conver="true"
+               data-unit="1024"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -118,7 +123,8 @@
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-display="true"
-               data-unit-conver="false"
+               data-unit-conver="true"
+               data-unit="1000"
                data-smoother-selector="#smoother"
                data-slider-selector="#slider">
           </div>
