--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
@@ -139,6 +139,6 @@
 <script type="text/javascript">
   if (typeof horizon.d3_line_chart !== 'undefined') {
     horizon.d3_line_chart_ceilometer.init("div[data-chart-type='line_chart']",
-      {'auto_resize': true});
+      {'auto_resize': true}, true);
   }
  </script>
