--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
@@ -27,8 +27,7 @@
                data-smoother-selector="#smoother"
                data-display="true"
                data-meter="0"
-               data-unit-conver="true"
-               data-unit="1000"
+               data-unit-conver="false"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -43,8 +42,7 @@
 	               data-smoother-selector="#smoother"
 	               data-display="true"
 	               data-meter="1"
-	               data-unit-conver="true"
-	               data-unit="1024"
+	               data-unit-conver="false"
 	               data-slider-selector="#slider">
 	          </div>
 	        </div>
