--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
@@ -18,37 +18,36 @@
     <h4 class="meter_image" id="cpu_title_image"><span style="line-height:2.5">{% trans "cpu" %}</span><span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showCPU();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
     <hr class="header_rule" />
     <div id="cpu_cup_util" class="info row-fluid detail">
-     <div class="chart_title_name"><div class="chart_title_name_left">{% trans "CPU Load 1 min" %}</div><div class="chart_title_name_right">{% trans "CPU Load 5 min" %}</div><div class="chart_title_name_clear"/></div>
+     <div class="chart_title_name"><div class="chart_title_name_left">{% trans "CPU Usage Rate" %}</div><div class="chart_title_name_right">{% trans "Memory Usage Rate" %}</div><div class="chart_title_name_clear"/></div>
       <div class="span9 chart_container" style="width: 400px;">
           <div class="chart"
                data-chart-type="line_chart"
-               data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.cpu.load.1min&date_options=null&resource_id={{ instance }}"
+               data-url="{% url 'horizon:admin:metering:samples'%}?meter=compute.node.cpu.user.percent&date_options=null&resource_id={{ instance }}"
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
                data-display="true"
-               data-unit-conver="true"
-               data-unit="1000"
+               data-meter="0"
+               data-unit-conver="false"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
         </div>
         <div class="span3 legend_container">
-          <div class="span9 chart_container" style="width: 400px;">
-          <div class="chart"
-               data-chart-type="line_chart"
-               data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.cpu.load.5min&date_options=null&resource_id={{ instance }}"
-               data-form-selector='#linechart_general_form'
-               data-legend-selector="#legend"
-               data-smoother-selector="#smoother"
-               data-display="true"
-               data-unit-conver="true"
-               data-unit="1000"
-               data-slider-selector="#slider">
-          </div>
-          <div id="slider"></div>
-        </div>
-        
+	        <div class="span9 chart_container" style="width: 400px;">
+		        <div class="chart"
+		             data-chart-type="line_chart"
+		             data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.memory.used&date_options=null&resource_id={{ instance }}"
+		             data-form-selector='#linechart_general_form'
+		             data-legend-selector="#legend"
+		             data-smoother-selector="#smoother"
+		             data-display="true"
+		             data-meter="1"
+		             data-unit-conver="false"
+		             data-slider-selector="#slider">
+		        </div>
+		        <div id="slider"></div>
+		    </div>
         </div>
 
         </div>
@@ -56,52 +55,13 @@
     </div>
   </div>
 </div>
-<div class="info row-fluid detail">
-  <div class="span12">
-    <h4 class="meter_image" id="memory_title_image"><span style="line-height:2.5">{% trans "memory" %}</span><span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showMemory();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
-    <hr class="header_rule" />
-    <div id="memory_memory_usage" class="info row-fluid detail">
-      <div class="chart_title_name"><div class="chart_title_name_left">{% trans "Memory Total" %}</div><div class="chart_title_name_right">{% trans "Memory Used" %}</div><div class="chart_title_name_clear"/></div>
-      <div class="span9 chart_container" style="width: 400px;">
-          <div class="chart"
-               data-chart-type="line_chart"
-               data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.memory.total&date_options=null&resource_id={{ instance }}"
-               data-form-selector='#linechart_general_form'
-               data-legend-selector="#legend"
-               data-smoother-selector="#smoother"
-               data-display="true"
-               data-unit-conver="true"
-               data-unit="1024"
-               data-slider-selector="#slider">
-          </div>
-          <div id="slider"></div>
-        </div>
-        <div class="span3 legend_container">
-          <div class="span9 chart_container" style="width: 400px;">
-          <div class="chart"
-               data-chart-type="line_chart"
-               data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.memory.used&date_options=null&resource_id={{ instance }}"
-               data-form-selector='#linechart_general_form'
-               data-legend-selector="#legend"
-               data-smoother-selector="#smoother"
-               data-display="true"
-               data-unit-conver="true"
-               data-unit="1024"
-               data-slider-selector="#slider">
-          </div>
-          <div id="slider"></div>
-        </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
 <div class="info row-fluid detail">
   <div class="span12">
     <h4 class="meter_image" id="network_bytes_image"><span style="line-height:2.5">{% trans "network" %}</span><span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showNetworkBytes();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
     <hr class="header_rule" />
     <div id="network_bytes" class="info row-fluid detail">
-    <div class="chart_title_name"><div class="chart_title_name_left">{% trans "Network Incoming and Outgoing Bytes" %}</div><div class="chart_title_name_right" style="margin-right:39.5%;">{% trans "Network Bandwidth Bytes" %}</div><div class="chart_title_name_clear"/></div>
+    <div class="chart_title_name"><div class="chart_title_name_left">{% trans "Network Incoming and Outgoing Bytes" %}</div><div class="chart_title_name_right" style="margin-right:39.5%;">{% trans "Network Outgong and Ingong Packets" %}</div><div class="chart_title_name_clear"/></div>
       <div class="span9 chart_container" style="width: 400px;">
           <div class="chart"
                data-chart-type="line_chart"
@@ -109,6 +69,8 @@
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-display="true"
+               data-meter="2"
+               data-y_axis={% trans "Network Bandwidth(Units/" %}
                data-unit-conver="true"
                data-unit="1024"
                data-smoother-selector="#smoother"
@@ -117,22 +79,24 @@
           <div id="slider"></div>
         </div>
         <div class="span3 legend_container">
-          <div class="span9 chart_container" style="width: 400px;">
-          <div class="chart"
-               data-chart-type="line_chart"
-               data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.network.bandwidth.bytes&date_options=null&resource_id={{ instance }}"
-               data-form-selector='#linechart_general_form'
-               data-legend-selector="#legend"
-               data-display="true"
-               data-unit-conver="true"
-               data-unit="1024"
-               data-smoother-selector="#smoother"
-               data-slider-selector="#slider">
-          </div>
-          <div id="slider"></div>
-        </div>
-        
-      </div>
+	          <div class="span9 chart_container" style="width: 400px;">
+		          <div class="chart"
+		               data-chart-type="line_chart"
+		               data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.network.bandwidth.bytes&date_options=null&resource_id={{ instance }}"
+		               data-form-selector='#linechart_general_form'
+		               data-legend-selector="#legend"
+		               data-display="true"
+		               data-meter="3"
+                       data-y_axis={% trans "Network Packege(Units/Amount)" %}
+		               data-unit-conver="true"
+		               data-unit="1024"
+		               data-smoother-selector="#smoother"
+		               data-slider-selector="#slider">
+		          </div>
+		          <div id="slider"></div>
+	        </div>
+	     </div>
+      
     </div>
   </div>
 </div>
