Get total network statistics data of an instance.
The resource id of the network.incoming/outgoing.* data are interface id,
not instance id, so we add metadata.instance_id filter to select all
data of an instance.
If an instance has multiple interfaces and you want the total data of the
instance, request with group_by=project.
If a request with resource_id filter or metadata filter, the series returned
will named to meter name.

ref #352

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
@@ -63,7 +63,7 @@
       <div class="span9 chart_container" style="width: 400px;">
           <div class="chart"
                data-chart-type="line_chart"
-               data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.incoming.bytes-network.outgoing.bytes&group_by=project&date_options=null"
+							 data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.incoming.bytes.rate-network.outgoing.bytes.rate&period=60&group_by=project&stats_attr=sum&date_options=null&metadata.instance_id={{ instance.id }}"
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-display="true"
@@ -80,7 +80,7 @@
           <div class="span9 chart_container" style="width: 400px;">
           <div class="chart"
                data-chart-type="line_chart"
-               data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.incoming.packets-network.outgoing.packets&group_by=project&date_options=null"
+							 data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.incoming.packets.rate-network.outgoing.packets.rate&period=60&group_by=project&stats_attr=sum&date_options=null&metadata.instance_id={{ instance.id }}"
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-display="true"
