Chart bind commands
  Set tab 'preload=False'

  Ref:#371

--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_usage.html
@@ -114,13 +114,14 @@
                data-url="{% url 'horizon:admin:metering:samples'%}"
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
+               data-display="true"
                data-smoother-selector="#smoother" 
                data-display="true"
                data-meter="0"
                data-unit-conver="true"
+               data-smoother-selector="#smoother"
                data-slider-selector="#slider">
           </div>
-          <div id="slider"></div>
         </div>
         <div class="span3 legend_container">
           <a href="javascript:void(0);" onClick="csv();" title="Download CSV Summary" 
