--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_usage.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_usage.html
@@ -5,13 +5,13 @@
 <div id="ceilometer-stats">
   <form class="form-horizontal"
         id="linechart_usage_form">
+    <input id="resource_id" name="resource_id" value="{{ instance.id }}" type="hidden"/>
+    <input id="group_by" name="group_by" value="project" type="hidden"/>
     <div class="control-group">
       <label for="meter" class="control-label">{% trans "Metric" %}:&nbsp;</label>
       <div class="controls line_chart_time_picker">
         <select data-line-chart-command="select_box_change"
                 name="meter" id="meter" class="span2 example">
-
-
             <optgroup label='{% trans "Compute (Nova)" %}'>
               {% for meter in nova_meters %}
                 <option title="{{ meter.description }}"  value="{{ meter.name }}" data-unit="{{ meter.unit }}">
@@ -24,16 +24,22 @@
       
     </div>
 
-    <div class="control-group">
-      <label for="group_by" class="control-label">{% trans "Group by" %}:&nbsp;</label>
-      <div class="controls">
-        <select data-line-chart-command="select_box_change"
-                id="group_by" name="group_by" class="span2">
-          <option value="" selected="selected">{% trans "--" %}</option>
-          <option selected="selected" value="project" selected>{% trans "Project" %}</option>
-        </select>
-      </div>
+  <div class="control-group">
+    <label for="date_options" class="control-label">{% trans "Statistics Interval" %}:&nbsp;</label>
+    <div class="controls">
+      <select data-line-chart-command="select_box_change"
+              id="period" name="period" class="span2">
+        <option value="60000" selected="selected">{% trans "1 min" %}</option>
+        <option value="300000">{% trans "5 min" %}</option>
+        <option value="600000">{% trans "10 min" %}</option>
+        <option value="1800000">{% trans "30 min" %}</option>
+        <option value="3600000">{% trans "1 hour" %}</option>
+        <option value="86400000">{% trans "1 day" %}</option>
+        <option value="604800000">{% trans "1 week" %}</option>
+        <option value="2073600000">{% trans "1 month" %}</option>
+      </select>
     </div>
+  </div>
     <div class="control-group">
       <label for="stats_attr" class="control-label">{% trans "Value" %}:&nbsp;</label>
       <div class="controls">
@@ -48,7 +54,7 @@
       </div>
     </div>
     <div class="control-group">
-      <label for="date_options" class="control-label">{% trans "Period" %}:&nbsp;</label>
+      <label for="date_options" class="control-label">{% trans "Statistics Period" %}:&nbsp;</label>
       <div class="controls">
         <select data-line-chart-command="select_box_change"
                 id="date_options" name="date_options" class="span2">
@@ -62,14 +68,14 @@
         </select>
       </div>
     </div>
-    <div class="control-group" id="date_from">
+    <div class="control-group" id="usage_date_from">
       <label for="date_from" class="control-label">{% trans "From" %}:&nbsp;</label>
       <div class="controls">
         <input data-line-chart-command="date_picker_change"
                type="text" id="date_from" name="date_from" class="span2 example"/>
       </div>
     </div>
-    <div class="control-group" id="date_to">
+    <div class="control-group" id="usage_date_to">
       <label for="date_to" class="control-label">{% trans "To" %}:&nbsp;</label>
       <div class="controls">
         <input data-line-chart-command="date_picker_change"
@@ -88,14 +94,17 @@
     <h4>{% trans "Statistics of all resources" %}</h4>
     <hr class="header_rule" />
     <div class="info row-fluid detail">
-      <div class="span9 chart_container">
+      <div class="span9 chart_container"  style="width: 500px;">
           <div class="chart"
                data-chart-type="line_chart"
                data-url="{% url 'horizon:admin:metering:samples'%}"
                data-form-selector='#linechart_usage_form'
                data-legend-selector="#legend"
-               data-smoother-selector="#smoother"
-               data-slider-selector="#slider_usage">
+               data-smoother-selector="#smoother" 
+               data-display="true"
+               data-meter="0"
+               data-unit-conver="true"
+               data-slider-selector="#slider">
           </div>
           <div id="slider_usage"></div>
         </div>
@@ -110,8 +119,8 @@
 
 <script type="text/javascript">
   if (typeof horizon.d3_line_chart !== 'undefined') {
-    horizon.d3_line_chart.init("div[data-chart-type='line_chart']",
-      {'auto_resize': true});
+    horizon.d3_line_chart_ceilometer.init("div[data-chart-type='line_chart']",
+      {'auto_resize': true}, false);
   }
 
   if (typeof $ !== 'undefined') {
@@ -128,16 +137,16 @@
         // want to refresh, but show hide the date fields
         if ($(this).find("option:selected").val() == "other"){
           evt.stopPropagation();
-          $("#date_from .controls input, #date_to .controls input").val('');
-          $("#date_from, #date_to").show();
+          $("#usage_date_from .controls input, #date_to .controls input").val('');
+          $("#usage_date_from, #usage_date_to").show();
         } else {
-          $("#date_from, #date_to").hide();
+          $("#usage_date_from, #usage_date_to").hide();
         }
     });
     if ($("#date_options").find("option:selected").val() == "other"){
-      $("#date_from, #date_to").show();
+      $("#usage_date_from, #usage_date_to").show();
     } else {
-      $("#date_from, #date_to").hide();
+      $("#usage_date_from, #usage_date_to").hide();
     }
   }
 </script>
